# pub-analysis

./: .gitignore  LICENSE  PLAN.md  README.md  config.yaml  environment.yml  pyproject.toml
docs/: bib-yaml.md  configuration.md  distillations.md  figures.md  markdown-rendering.md
puba/: __init__.py  _common_prompts.py  cli.py  config.py  config.yaml  io.py  sidecar.py  state.py
puba/bib/: classify.py  conflicts.py  stub.py
puba/bib/sources/: _common.py  arxiv.py  bibtex.py  crossref.py  dblp.py  llm.py  openalex.py  osti.py  semanticscholar.py
puba/distill/: queries.py  run.py  scope.py
puba/figures/: __init__.py  extract.py
puba/llm/: argo.py  openai_client.py
puba/md/: cleanup.py  render.py  slicing.py
puba/pdf/: extract.py  mineru.py  repair.py  sections.py
tests/: test_bib_edit.py  test_bib_stub_offline.py  test_bibtex_source.py  test_classify.py  test_clean_invalidates_state.py  test_cli_json.py  test_cli_show.py  test_config_init.py  test_config_validate.py  test_distill_offline.py  test_e2e_bib.py  test_e2e_distill.py  test_e2e_figures_mineru.py  test_e2e_md_mineru.py  test_figures_offline.py  test_mineru_offline.py  test_osti_source.py  test_repair.py  test_sections.py  test_show_md_head_tail.py  test_sidecar_provenance.py  test_state_extra_key.py
tests/fixtures/: README.md
