[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "puba"
version = "0.1.0"
requires-python = ">=3.11"
description = "Single-paper bibliographic resolution and markdown rendering"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pypdf",
    "pdfplumber",
    "tiktoken",
    "openai",
    "httpx",
    "pydantic>=2",
    "tenacity",
    "python-dotenv",
    "pyyaml",
    "rich",
    "typer",
    "bibtexparser",
    "requests",
    "pymupdf",
    "mineru[pipeline]>=3.4",
    "accelerate>=1.14",
    "opencv-python-headless>=4.13",
    "six",
]

[project.scripts]
puba = "puba.cli:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["puba*"]

[tool.setuptools.package-data]
puba = ["config.yaml"]

[tool.pytest.ini_options]
markers = [
    "network: requires external network access (deselect with -m 'not network')",
    "gpu: requires GPU and MinerU models (deselect with -m 'not gpu')",
    "exhaustive: extended fixture sweep; combine with gpu (run with -m 'gpu and exhaustive')",
]
